# MIDI

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  environment.yaml  evaluation.yaml  midi.repos  package.xml  real.bash  setup.bash  sim.bash  sitl.bash
configs/: real.yaml  sim.yaml  sitl.yaml
include/: autopilot_states.h  common.hpp  planner_node.hpp
include/common_math/: cuda_conversions.cuh  cuda_fourth_order_polynomial.cuh  cuda_math.cuh  cuda_monotonic_segment3.cuh  cuda_pinhole_camera_model.cuh  cuda_polynomial_base.cuh  cuda_second_order_polynomial.cuh  cuda_segment.cuh  cuda_segment2.cuh  cuda_segment3.cuh  cuda_third_order_polynomial.cuh  frame_transforms.hpp  monotonic_segment3.hpp  pinhole_camera_model.hpp  polynomial.hpp  polynomial2.hpp  polynomial3.hpp  polynomial4.hpp  pyramid.hpp  segment.hpp  segment2.hpp  segment3.hpp
include/depth_uncertainty_planner/: base_planner.hpp  cuda_collision_checker.cuh  sampling.hpp  trajectory_cost.hpp
launch/: depth_camera.launch  real.launch  sitl.launch
resources/rviz/: d435.rviz  envsim.rviz
src/: cuda_collision_checker.cu  du_planner.cpp  main.cpp  planner_node.cpp  planner_node_parameters.cpp  pyramid_planner.cpp
test/: Benchmarker.cpp  CMakeLists.txt
